--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -64,8 +64,15 @@
   @mixin heart{
     font-size: 30px;
     position: absolute;
-   
-    transform: translate(-50%);
     left: 302px;
     bottom: 27px;
+  }
+  @mixin heartcolor{
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
+    opacity: 100%;
+    font-weight: 100;
+
   }
