--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,57 +7,7 @@
 
 
 /*--Les Mixin--*/
-
-  @mixin flexMid{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  @mixin btn-exp{
-    border-radius: 25px;
-    background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-    color: white;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  } 
-  @mixin btn-fonc{
-    border-radius: 20px;
-    background-color:#F6F6F6;
-    box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
-  }
-  @mixin btn-cards{
-    border-radius: 20px;
-    background-color:#F6F6F6;
-  }
-  @mixin title{
-    font-family: "Roboto";
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-  @mixin ellipse{
-    border-radius: 12px;
-    background-color:#9356DC ;
-    color: white;
-    text-align: center;
-    position: absolute;
-    margin-right: 320px;
-  }
-  @mixin badge{
-    position: absolute;
-    background-color: aquamarine;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-  }
-  @mixin heart{
-    font-size: 30px;
-    position: absolute;
-   
-    transform: translate(-50%);
-    left: 302px;
-    bottom: 27px;
-  }
+@import "./mixins.scss";
 
   body{
     margin: 0px;
@@ -307,6 +257,115 @@ h1{
         }
     } 
  }
+ /*--Heart1--*/
+
+ .heart1{
+    @include heart;
+    color: #000000;
+    
+ }
+ .heartColore1{
+    @include heart;
+    @include heartcolor;
+    transition: opacity 1s ease-out;
+ }
+ 
+ input[type="checkbox"]{
+    
+    display: none;
+    pointer-events: none;
+
+    & + label{
+        cursor: pointer;
+
+        .heartColore1{
+            opacity: 0%;
+        }
+    }
+    &:checked + label{
+        .heartColore1{
+            opacity: 100%;
+        }
+    }
+ }
+ label{
+    width: 50px;
+    height: 50px;
+ }
+
+ /*--Heart2--*/
+
+ .heart2{
+    @include heart;
+    color: #000000;
+    
+ }
+ .heartColore2{
+    @include heart;
+    @include heartcolor;
+    transition: opacity 1s ease-out;
+ }
+ 
+ input[type="checkbox"]{
+    
+    display: none;
+    pointer-events: none;
+
+    & + label{
+        cursor: pointer;
+
+        .heartColore2{
+            opacity: 0%;
+        }
+    }
+    &:checked + label{
+        .heartColore2{
+            opacity: 100%;
+        }
+    }
+ }
+ label{
+    width: 50px;
+    height: 50px;
+ }
+
+ /*--Heart3--*/
+
+ .heart3{
+    @include heart;
+    color: #000000;
+    
+ }
+ .heartColore3{
+    @include heart;
+    @include heartcolor;
+    transition: opacity 1s ease-out;
+ }
+ 
+ input[type="checkbox"]{
+    
+    display: none;
+    pointer-events: none;
+
+    & + label{
+        cursor: pointer;
+
+        .heartColore3{
+            opacity: 0%;
+        }
+    }
+    &:checked + label{
+        .heartColore3{
+            opacity: 100%;
+        }
+    }
+ }
+ label{
+    width: 50px;
+    height: 50px;
+ }
+
+ /*--Heart4--*/
 
  .heart{
     @include heart;
@@ -315,23 +374,34 @@ h1{
  }
  .heartColore{
     @include heart;
+    @include heartcolor;
+    transition: opacity 1s ease-out;
+ }
+ 
+ input[type="checkbox"]{
     
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-    opacity: 0%;
-    font-weight: 100;
-    transition: all 1s ease-out;    
-    
-    &:hover{ 
-       opacity: 100%;
+    display: none;
+    pointer-events: none;
+
+    & + label{
+        cursor: pointer;
+
+        .heartColore{
+            opacity: 0%;
+        }
     }
-   
+    &:checked + label{
+        .heartColore{
+            opacity: 100%;
+        }
+    }
+ }
+ label{
+    width: 50px;
+    height: 50px;
  }
 
-    
-
+ 
  /*-- footer--*/
 
  .sectionftr{
@@ -426,6 +496,12 @@ h1{
             width: 40%;
         }
     }
+    .heart{
+        left: 447px;
+    }
+    .heartColore{
+        left: 447px;
+    }
 
 }
 
@@ -477,12 +553,12 @@ h1{
 
     }
     .allBtnCardDown{
-        justify-content: center;
+        justify-content:center;
        display: flex;
        align-items: flex-start;
        gap: 100px;
        align-self: stretch;
-       margin-left: 100px;
+       
 
     }
     .bloque{
