--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -7,27 +7,7 @@
 
    /*--Les Mixin--*/
 
-  @mixin flexMid{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  @mixin fontshrik{
-    font-family: 'Shrikhand', serif;
-  }
-  @mixin rona{
-    white-space: nowrap;
-    text-overflow:ellipsis;
-    overflow: hidden;
-  }
-  @mixin heart2{
-    font-size: 30px;
-    position: absolute;
-   
-    transform: translate(-50%);
-    left: 329px;
-    bottom: 1181px;
-  }
+   @import "./mixins.scss";
  
    body{
     margin: 0px;
@@ -111,41 +91,45 @@
   .heart{
     @include heart;
     color: #000000;
-    display: block;
-
-    &:active>.heartColore{
-      display: none;
-    }
-    
-  
-   
+    left: 329px;
+    bottom: 1178px;
  }
  .heartColore{
-    @include heart;
-    
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-    opacity: 0%;
-    font-weight: 100;
-    transition: all 1s ease-out;
-    display: block; 
+  @include heart;
+  @include heartcolor;
+  
+  left: 329px;
+  bottom: 1178px;
+  
+  
+  transition: opacity 1s ease-out;
+  
+}
 
-    
-    /*z-index: 1;
-    font-size: 24px;
-    left: 302px;
-    bottom: 15px;*/
-    
-    &:hover{
-        
-       opacity: 100%;
-       
-    
-    }
-   
- }
+input[type="checkbox"]{
+  
+  
+  display: none;
+  pointer-events: none;
+
+  & + label{
+      cursor: pointer;
+
+      .heartColore{
+          opacity: 0%;
+      }
+  }
+  &:checked + label{
+      .heartColore{
+          opacity: 100%;
+      }
+  }
+}
+label{
+  width: 50px;
+  height: 50px;
+}
+
   .menu-sous-titre{
     
     border-bottom: solid 3px rgba(153, 226, 208, 1);
