--- a/scss/stylemenu2.css
+++ b/scss/stylemenu2.css
@@ -6,9 +6,56 @@
 }
 
 /*--Les Mixin--*/
+/*--Les Mixin--*/
+/*--Les Mixin--*/
 body {
   margin: 0px;
   height: 1275px;
+}
+
+.heart {
+  font-size: 30px;
+  position: absolute;
+  left: 302px;
+  bottom: 27px;
+  color: #000000;
+  left: 329px;
+  bottom: 1178px;
+}
+
+.heartColore {
+  font-size: 30px;
+  position: absolute;
+  left: 302px;
+  bottom: 27px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
+  opacity: 100%;
+  font-weight: 100;
+  left: 329px;
+  bottom: 1178px;
+  transition: opacity 1s ease-out;
+}
+
+input[type=checkbox] {
+  display: none;
+  pointer-events: none;
+}
+input[type=checkbox] + label {
+  cursor: pointer;
+}
+input[type=checkbox] + label .heartColore {
+  opacity: 0%;
+}
+input[type=checkbox]:checked + label .heartColore {
+  opacity: 100%;
+}
+
+label {
+  width: 50px;
+  height: 50px;
 }
 
 h2 {
