--- a/scss/style.scss
+++ b/scss/style.scss
@@ -497,10 +497,28 @@ h1{
         }
     }
     .heart{
-        left: 447px;
+        left: 430px;
     }
     .heartColore{
-        left: 447px;
+        left: 430px;
+    }
+    .heart1{
+        left: 430px;
+    }
+    .heartColore1{
+        left: 430px;
+    }
+    .heart2{
+        left: 430px;
+    }
+    .heartColore2{
+        left: 430px;
+    }
+    .heart3{
+        left: 430px;
+    }
+    .heartColore3{
+        left: 430px;
     }
 
 }
@@ -632,6 +650,24 @@ h1{
         left: 440px;
     }
     .heartColore{
+        left: 440px;
+    }
+    .heart1{
+        left: 440px;
+    }
+    .heartColore1{
+        left: 440px;
+    }
+    .heart2{
+        left: 440px;
+    }
+    .heartColore2{
+        left: 440px;
+    }
+    .heart3{
+        left: 440px;
+    }
+    .heartColore3{
         left: 440px;
     }
 }
