--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -396,7 +396,7 @@ label{
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-  @mixin heart{
+  @mixin heart2{
     font-size: 30px;
     position: absolute;
    
