--- a/scss/style.css
+++ b/scss/style.css
@@ -555,10 +555,28 @@ label {
     width: 40%;
   }
   .heart {
-    left: 447px;
+    left: 430px;
   }
   .heartColore {
-    left: 447px;
+    left: 430px;
+  }
+  .heart1 {
+    left: 430px;
+  }
+  .heartColore1 {
+    left: 430px;
+  }
+  .heart2 {
+    left: 430px;
+  }
+  .heartColore2 {
+    left: 430px;
+  }
+  .heart3 {
+    left: 430px;
+  }
+  .heartColore3 {
+    left: 430px;
   }
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
@@ -675,6 +693,24 @@ label {
     left: 440px;
   }
   .heartColore {
+    left: 440px;
+  }
+  .heart1 {
+    left: 440px;
+  }
+  .heartColore1 {
+    left: 440px;
+  }
+  .heart2 {
+    left: 440px;
+  }
+  .heartColore2 {
+    left: 440px;
+  }
+  .heart3 {
+    left: 440px;
+  }
+  .heartColore3 {
     left: 440px;
   }
 }/*# sourceMappingURL=style.css.map */
