--- a/scss/stylemenu2.scss
+++ b/scss/stylemenu2.scss
@@ -402,21 +402,20 @@ label{
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-  @mixin heart{
+  @mixin heart2{
     font-size: 30px;
     position: absolute;
    
     transform: translate(-50%);
-    left: 673px;
-    bottom: 1181px;
+    left: 685px;
+    bottom: 1269px;
   }
 
-.heart{
-  @include heart2;
-}
-.heartColore{
-  @include heart2;
-  
-
+  .heart{
+    @include heart2;
+  }
+  .heartColore{
+    @include heart2;
+    
 }
 }
