--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 
 /*--Les Mixin--*/
 @import "./mixins.scss";
+@import "./animation.scss";
 
   body{
     margin: 0px;
@@ -51,33 +52,7 @@
       }
   }
 
-  @keyframes enso{
-    0%{ 
-        opacity: 0,5;
-    }
-    70%{
-        opacity: 0,3;
-    }
-    90%{
-        opacity: 0,3;
-    }
-    100%{ 
-        opacity:0,2;
-        display: none;       
-    }
-  }
- 
-  @keyframes chargeur{
-    0%{
-      transform: rotate(0deg) scale(1);
-    }
-    50%{
-      transform:rotate (360deg) scale(1);
-    }
-    100%{
-      transform: rotate(720deg) scale(1);
-    }
-  }
+
 /*--Header--*/
 h1{
     font-size: 24px;
@@ -87,7 +62,9 @@ h1{
 .logo {
         @include flexMid;
         background-color:white;
-        box-shadow: 0 8px 2px -2px gray;
+        box-shadow: 0 0 8px rgba(0,0,0,.25);
+        position: relative;
+        z-index: 1;
         
         img{
            width:162px;
