--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -8,6 +8,7 @@
    /*--Les Mixin--*/
 
    @import "./mixins.scss";
+   @import "./animation.scss";
  
    body{
     margin: 0px;
@@ -56,9 +57,9 @@
   
   .image-principal{
     img{
-        width: 100%;
-        height: 275px;
-        object-fit: cover;
+      width: 100%;
+      height: 275px;
+      object-fit: cover;
     }    
   }  
   
@@ -74,119 +75,95 @@
     align-items:center;
    
     .menu{
-        @include flexMid;
-        .menu-titre{
-            
-            font-size: 21px;
-            margin-right: 60px;
-            h1{
-              @include fontshrik;
-              font-size: 28px;
-              font-weight: 400;
-
-            }
-        }
-      }
-  }
-  .heart{
-    @include heart;
-    color: #000000;
-    left: 329px;
-    bottom: 1178px;
- }
- .heartColore{
-  @include heart;
-  @include heartcolor;
-  
-  left: 329px;
-  bottom: 1178px;
-  
-  
-  transition: opacity 1s ease-out;
-  
-}
-
-input[type="checkbox"]{
-  
-  
-  display: none;
-  pointer-events: none;
-
-  & + label{
-      cursor: pointer;
-
-      .heartColore{
-          opacity: 0%;
-      }
-  }
-  &:checked + label{
-      .heartColore{
-          opacity: 100%;
-      }
-  }
-}
-label{
-  width: 50px;
-  height: 50px;
-}
-
-  .menu-sous-titre{
-    
-    border-bottom: solid 3px rgba(153, 226, 208, 1);
-    width: 40px;
-    h2{
-        font-size: 16px;
-        font-weight: 300;
-        text-transform: uppercase;
-        margin-bottom: 5px;
-    }
-    
-  }
-  .menu-cards{
-    margin-bottom: 40px;
-  
-    .card-solo{
-        width: 319px;
-        height: 42px;
-        align-items: center;
-        background-color: #FFF;
-        border-radius: 15px;
+      @include flexMid;
+      .menu-titre{
         display: flex;
-        justify-content: space-between;
-        margin: 15px 0px;
-        padding: 15px;
-        box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
-        position: relative;
-        overflow: hidden;
-        
-        &:hover .secleft{
-        animation: coulissement 330ms forwards;
-      } 
-     
-       &:hover .valide {
-          transform:translate(-100%,0); 
-       }
-       &:hover .prix {
-         transform:translate(-80%,0);
+        align-items: center; 
+        font-size: 21px;
+          
+        h1{
+          @include fontshrik;
+          font-size: 28px;
+          font-weight: 400;
+          margin-left: 25px;
+          margin-right: 20px;
+
+        }
       }
     }
   }
  
-@keyframes coulissement {
+label {
+
+  .like {
+      display: block;
+      cursor: pointer;
+      width: 22px;
+      height: 21px;
+      background-image: url("/assets/images/heart/Status=Default.jpg");
+      background-size: contain;
+      background-repeat: no-repeat;
+  }
+  input {
+      display: none;
+  }
+  input:checked ~ .like {
+      background-image: url("/assets/images/heart/Status=Liked.jpg");
+      animation: opacityFade 1s;
+  }
+}
+@keyframes opacityFade {
   from {
-    width: 300px;
-  } to {
-    width: 220px;
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
-@keyframes slide {
-  from {
-    left: 262px;
-  } to {
-    left: 222px;
+
+.menu-sous-titre{
+    
+  border-bottom: solid 3px rgba(153, 226, 208, 1);
+  width: 40px;
+  h2{
+      font-size: 16px;
+      font-weight: 300;
+      text-transform: uppercase;
+      margin-bottom: 5px;
   }
+  
 }
+.menu-cards{
+  margin-bottom: 40px;
+
+  .card-solo{
+      width: 319px;
+      height: 42px;
+      align-items: center;
+      background-color: #FFF;
+      border-radius: 15px;
+      display: flex;
+      justify-content: space-between;
+      margin: 15px 0px;
+      padding: 15px;
+      box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
+      position: relative;
+      overflow: hidden;
+      
+      &:hover .secleft{
+      animation: coulissement 330ms forwards;
+    } 
+   
+     &:hover .valide {
+        transform:translate(-100%,0); 
+     }
+     &:hover .prix {
+       transform:translate(-80%,0);
+    }
+  }
+}  
+ 
   .secleft{
     height: 43px;
     width: 300px;
@@ -197,14 +174,13 @@ label{
     transform: scaleX(0) 330ms ease-in-out;
     .focus{
       animation: coulissement 330ms ease-in-out ;
-  }
+    }  
+  
     h2{
          margin: 0px 0px 5px;
          @include rona;
          font-size: 18px;
-         white-space: nowrap;
-         text-overflow: ellipsis;
-         overflow: hidden;
+        
          font-weight: 500 ;
     }
     p{
@@ -212,9 +188,7 @@ label{
       font-size: 14px;
       font-weight: 300;
       @include rona;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+     
     }
   }
   .prix{
@@ -392,25 +366,17 @@ label{
     }
   }
 
-
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-  @mixin heart2{
-    font-size: 30px;
-    position: absolute;
-   
-    transform: translate(-50%);
-    left: 673px;
-    bottom: 1181px;
-  }
 
-.heart{
+
+/*.heart{
   @include heart2;
 }
 .heartColore{
   @include heart2;
   
 
-}
+}*/
 }
