--- a/scss/stylemenu2.css
+++ b/scss/stylemenu2.css
@@ -81,59 +81,44 @@ header {
   align-items: center;
 }
 .all-menu .menu .menu-titre {
+  display: flex;
+  align-items: center;
   font-size: 21px;
-  margin-right: 60px;
 }
 .all-menu .menu .menu-titre h1 {
   font-family: "Shrikhand", serif;
+  font-size: 28px;
+  font-weight: 400;
+  margin-left: 25px;
+  margin-right: 20px;
 }
 
 /*--Heart--*/
-.heart {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  color: #000000;
-  left: 345px;
-  bottom: 1271px;
-}
-
-.heartColore {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-  opacity: 100%;
-  font-weight: 100;
-  left: 345px;
-  bottom: 1271px;
-  transition: opacity 1s ease-out;
-}
-
-input[type=checkbox] {
-  display: none;
-  pointer-events: none;
-}
-input[type=checkbox] + label {
+label .like {
+  display: block;
   cursor: pointer;
+  width: 22px;
+  height: 21px;
+  background-image: url("/assets/images/heart/Status=Default.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
-input[type=checkbox] + label .heartColore {
-  opacity: 0%;
+label input {
+  display: none;
 }
-input[type=checkbox]:checked + label .heartColore {
-  opacity: 100%;
+label input:checked ~ .like {
+  background-image: url("/assets/images/heart/Status=Liked.jpg");
+  animation: opacityFade 1s;
 }
 
-label {
-  width: 50px;
-  height: 50px;
+@keyframes opacityFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
 .menu-sous-titre {
   border-bottom: solid 3px rgb(153, 226, 208);
   width: 40px;
@@ -206,9 +191,6 @@ label {
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 18px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
   font-weight: 500;
 }
 .secleft p {
@@ -217,9 +199,6 @@ label {
   font-weight: 300;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
 }
 
@@ -388,18 +367,24 @@ label {
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-  .heart {
+  /*@mixin heart2{
     font-size: 30px;
     position: absolute;
+
     transform: translate(-50%);
     left: 685px;
     bottom: 1269px;
+  }*/
+  .heart {
+    font-size: 30px;
+    position: absolute;
+    left: 673px;
+    bottom: 1181px;
   }
   .heartColore {
     font-size: 30px;
     position: absolute;
-    transform: translate(-50%);
-    left: 685px;
-    bottom: 1269px;
+    left: 673px;
+    bottom: 1181px;
   }
 }/*# sourceMappingURL=stylemenu2.css.map */
