--- a/scss/stylemenu2.scss
+++ b/scss/stylemenu2.scss
@@ -80,60 +80,51 @@
   align-items:center;
    
   .menu{
-        @include flexMid;
-        .menu-titre{
-            
-            font-size: 21px;
-            margin-right: 60px;
-            h1{
-              @include fontshrik;
+    @include flexMid;
+    .menu-titre{
+      display: flex;
+      align-items: center; 
+      font-size: 21px;
+      
+      h1{
+        @include fontshrik;
+        font-size: 28px;
+        font-weight: 400;
+        margin-left: 25px;
+        margin-right: 20px;
 
-            }
-        }
       }
+    }
   }
+}
   /*--Heart--*/
 
-  .heart{
-    @include heart;
-    color: #000000;
-    left: 345px;
-    bottom: 1271px;
- }
- .heartColore{
-  @include heart;
-  @include heartcolor;
-  
-  left: 345px;
-  bottom: 1271px;
-  
-  
-  transition: opacity 1s ease-out;
-  
-}
+label {
 
-input[type="checkbox"]{
-  
-  
-  display: none;
-  pointer-events: none;
-
-  & + label{
+  .like {
+      display: block;
       cursor: pointer;
-
-      .heartColore{
-          opacity: 0%;
-      }
+      width: 22px;
+      height: 21px;
+      background-image: url("/assets/images/heart/Status=Default.jpg");
+      background-size: contain;
+      background-repeat: no-repeat;
   }
-  &:checked + label{
-      .heartColore{
-          opacity: 100%;
-      }
+  input {
+      display: none;
+  }
+  input:checked ~ .like {
+      background-image: url("/assets/images/heart/Status=Liked.jpg");
+      animation: opacityFade 1s;
   }
 }
-label{
-  width: 50px;
-  height: 50px;
+@keyframes opacityFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
   .menu-sous-titre{
@@ -208,9 +199,7 @@ label{
          margin: 0px 0px 5px;
          @include rona;
          font-size: 18px;
-         white-space: nowrap;
-         text-overflow: ellipsis;
-         overflow: hidden;
+        
          font-weight: 500 ;
     }
     p{
@@ -218,9 +207,7 @@ label{
       font-size: 14px;
       font-weight: 300;
       @include rona;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+     
     }
   }
   .prix{
@@ -402,14 +389,14 @@ label{
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-  @mixin heart2{
+  /*@mixin heart2{
     font-size: 30px;
     position: absolute;
    
     transform: translate(-50%);
     left: 685px;
     bottom: 1269px;
-  }
+  }*/
 
   .heart{
     @include heart2;
