--- a/scss/style.css
+++ b/scss/style.css
@@ -27,7 +27,7 @@
     transform: rotate(0deg) scale(1);
   }
   50% {
-    transform: rotate 360deg scale(1);
+    transform: rotate(360deg) scale(1.2);
   }
   100% {
     transform: rotate(720deg) scale(1);
@@ -67,10 +67,9 @@ body {
   animation: enso 3s forwards;
 }
 .boxloader .loader {
-  opacity: 150%;
+  opacity: 100%;
   display: flex;
   justify-content: center;
-  flex-direction: center;
   align-items: center;
   margin: auto;
   margin-top: 100px;
@@ -156,7 +155,7 @@ h1 {
   align-items: center;
 }
 .bouton :hover {
-  border-radius: 25px;
+  /*border-radius: 25px;*/
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
 }
@@ -257,8 +256,6 @@ h1 {
 }
 
 .cards-resto {
-  border-radius: 20px;
-  background-color: #F6F6F6;
   width: 340px;
   height: 251px;
   border-radius: 20px;
@@ -323,173 +320,31 @@ h1 {
 }
 
 /*--Heart1--*/
-.heart1 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  color: #000000;
-}
-
-.heartColore1 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-  opacity: 100%;
-  font-weight: 100;
-  transition: opacity 1s ease-out;
-}
-
-input[type=checkbox] {
-  display: none;
-  pointer-events: none;
-}
-input[type=checkbox] + label {
+label .like {
+  display: block;
   cursor: pointer;
+  width: 22px;
+  height: 21px;
+  background-image: url("/assets/images/heart/Status=Default.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
-input[type=checkbox] + label .heartColore1 {
-  opacity: 0%;
-}
-input[type=checkbox]:checked + label .heartColore1 {
-  opacity: 100%;
-}
-
-label {
-  width: 50px;
-  height: 50px;
-}
-
-/*--Heart2--*/
-.heart2 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  color: #000000;
-}
-
-.heartColore2 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-  opacity: 100%;
-  font-weight: 100;
-  transition: opacity 1s ease-out;
-}
-
-input[type=checkbox] {
+label input {
   display: none;
-  pointer-events: none;
 }
-input[type=checkbox] + label {
-  cursor: pointer;
-}
-input[type=checkbox] + label .heartColore2 {
-  opacity: 0%;
-}
-input[type=checkbox]:checked + label .heartColore2 {
-  opacity: 100%;
+label input:checked ~ .like {
+  background-image: url("/assets/images/heart/Status=Liked.jpg");
+  animation: opacityFade 2s;
 }
 
-label {
-  width: 50px;
-  height: 50px;
+@keyframes opacityFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
-/*--Heart3--*/
-.heart3 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  color: #000000;
-}
-
-.heartColore3 {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-  opacity: 100%;
-  font-weight: 100;
-  transition: opacity 1s ease-out;
-}
-
-input[type=checkbox] {
-  display: none;
-  pointer-events: none;
-}
-input[type=checkbox] + label {
-  cursor: pointer;
-}
-input[type=checkbox] + label .heartColore3 {
-  opacity: 0%;
-}
-input[type=checkbox]:checked + label .heartColore3 {
-  opacity: 100%;
-}
-
-label {
-  width: 50px;
-  height: 50px;
-}
-
-/*--Heart4--*/
-.heart {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  color: #000000;
-}
-
-.heartColore {
-  font-size: 30px;
-  position: absolute;
-  left: 302px;
-  bottom: 27px;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-  opacity: 100%;
-  font-weight: 100;
-  transition: opacity 1s ease-out;
-}
-
-input[type=checkbox] {
-  display: none;
-  pointer-events: none;
-}
-input[type=checkbox] + label {
-  cursor: pointer;
-}
-input[type=checkbox] + label .heartColore {
-  opacity: 0%;
-}
-input[type=checkbox]:checked + label .heartColore {
-  opacity: 100%;
-}
-
-label {
-  width: 50px;
-  height: 50px;
-}
-
 /*-- footer--*/
 .sectionftr {
   background-color: #353535;
