--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,10 +29,9 @@
     
     
     .loader{
-        opacity: 150%;
+        opacity: 100%;
         display: flex;
         justify-content: center;
-        flex-direction: center;
         align-items: center;
         margin: auto;
         margin-top: 100px;
@@ -100,7 +99,6 @@ h1{
         height: 46px;
         text-align: center;
         font-size: 18px;
-        
       }
     
 }
@@ -109,11 +107,10 @@ h1{
 .bouton{
     @include flexMid;
     :hover{
-        border-radius: 25px;
+        /*border-radius: 25px;*/
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
-    }  
-    
+    } 
 }
 .btn-explo{
     @include flexMid;
@@ -121,9 +118,9 @@ h1{
     width: 218px;
     height: 50px;
     margin: 25px 25px 55px;
-    color: white;
-    
+    color: white;    
 }
+
 /*--fonctionnement--*/
 .allFonctionnement{
     padding: 40px 0px;
@@ -179,14 +176,12 @@ h1{
         justify-content: center;
         margin-right: 220px;
     }
-    
  }
 .sectionBtnResto{
     @include flexMid;
     margin-bottom: 20px
 }
 .cards-resto{
-    @include btn-cards;
     width: 340px;
     height: 251px;
     border-radius: 20px;
@@ -235,148 +230,34 @@ h1{
     } 
  }
  /*--Heart1--*/
+ label {
 
- .heart1{
-    @include heart;
-    color: #000000;
-    
- }
- .heartColore1{
-    @include heart;
-    @include heartcolor;
-    transition: opacity 1s ease-out;
- }
- 
- input[type="checkbox"]{
-    
-    display: none;
-    pointer-events: none;
-
-    & + label{
+    .like {
+        display: block;
         cursor: pointer;
-
-        .heartColore1{
-            opacity: 0%;
-        }
+        width: 22px;
+        height: 21px;
+        background-image: url("/assets/images/heart/Status=Default.jpg");
+        background-size: contain;
+        background-repeat: no-repeat;
     }
-    &:checked + label{
-        .heartColore1{
-            opacity: 100%;
-        }
+    input {
+        display: none;
     }
- }
- label{
-    width: 50px;
-    height: 50px;
- }
-
- /*--Heart2--*/
-
- .heart2{
-    @include heart;
-    color: #000000;
-    
- }
- .heartColore2{
-    @include heart;
-    @include heartcolor;
-    transition: opacity 1s ease-out;
- }
- 
- input[type="checkbox"]{
-    
-    display: none;
-    pointer-events: none;
-
-    & + label{
-        cursor: pointer;
-
-        .heartColore2{
-            opacity: 0%;
-        }
+    input:checked ~ .like {
+        background-image: url("/assets/images/heart/Status=Liked.jpg");
+        animation: opacityFade 2s;
     }
-    &:checked + label{
-        .heartColore2{
-            opacity: 100%;
-        }
+  }
+  @keyframes opacityFade {
+    from {
+      opacity: 0;
     }
- }
- label{
-    width: 50px;
-    height: 50px;
- }
-
- /*--Heart3--*/
-
- .heart3{
-    @include heart;
-    color: #000000;
-    
- }
- .heartColore3{
-    @include heart;
-    @include heartcolor;
-    transition: opacity 1s ease-out;
- }
- 
- input[type="checkbox"]{
-    
-    display: none;
-    pointer-events: none;
-
-    & + label{
-        cursor: pointer;
-
-        .heartColore3{
-            opacity: 0%;
-        }
+    to {
+      opacity: 1;
     }
-    &:checked + label{
-        .heartColore3{
-            opacity: 100%;
-        }
-    }
- }
- label{
-    width: 50px;
-    height: 50px;
- }
+  }
 
- /*--Heart4--*/
-
- .heart{
-    @include heart;
-    color: #000000;
-    
- }
- .heartColore{
-    @include heart;
-    @include heartcolor;
-    transition: opacity 1s ease-out;
- }
- 
- input[type="checkbox"]{
-    
-    display: none;
-    pointer-events: none;
-
-    & + label{
-        cursor: pointer;
-
-        .heartColore{
-            opacity: 0%;
-        }
-    }
-    &:checked + label{
-        .heartColore{
-            opacity: 100%;
-        }
-    }
- }
- label{
-    width: 50px;
-    height: 50px;
- }
 
  
  /*-- footer--*/
